First attempt to solve css overflow for ipad

--- a/sport_poomsae/tournament/style-TournSport.css
+++ b/sport_poomsae/tournament/style-TournSport.css
@@ -255,3 +255,8 @@ body {
 {
     color: #77FF00;
 }
+
+#master_wrapper
+{
+    overflow: auto;
+}
